--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
     "files.exclude": {
         "**/bin": true,
         "**/obj": true,
-        "**/output": true
+        // "**/output": true
     }
 }
