--- a/Glad.NET/Glad.NET.csproj
+++ b/Glad.NET/Glad.NET.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Glad.Net</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +23,10 @@
     <None Update="Resources/gladnet.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="output/*" />
   </ItemGroup>
 
 </Project>
