--- a/Glad.NET/Glad.NET.csproj
+++ b/Glad.NET/Glad.NET.csproj
@@ -25,8 +25,8 @@
     </None>
   </ItemGroup>
 
-  <ItemGroup>
+  <!-- <ItemGroup>
     <None Include="output/*" />
-  </ItemGroup>
+  </ItemGroup> -->
 
 </Project>
